# oxid

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yaml
.sqlx/: query-179f92fc580bb840b3de6295dd9800eaba3b8a66c898190c94cfb426d9a10f88.json  query-1a138e0d92a60b7b7263e9e038fdf06790686d8271808ff2f04b75f521de70ce.json  query-2682522f966ae599195f3df1b93547dcf38202813e8d87fb8671aeb888e54660.json  query-3627d23b417c4645505122c5787eaf8897de48ea122dd6d361d3a81d63e8363a.json  query-3bc3bb9a6f444ab2de8a78607883b7544b7917de2876cbb41cd4fa265b588c86.json  query-3d80d668511d5757000d70489e71983b3f66d2adc889a29ba6bd3632a7e8651f.json  query-4713635da1839bc3c06f316b7be2142e0e9d0c468083571d50ee76917d2eb3ce.json  query-818a25a59bcfffdb30f2f1b4fd63c6cfcde7e7165b61486d3d8d2a2f3a4399b3.json  query-9144c7231ce94e43a1ffe15dfc76f654554bc31a7ba9afd3464b6f2bfcc97918.json  query-9b330b425db1106f3cacf7ab10fe1e1f03f7f649a7283b12c08b4e9639e24783.json  query-bc4c8424f1a2b7c2b01dd8cac612b2f15651551c9f1b2bb723dec84bfe5e0e35.json  query-cc5ce14cd31823b51278b509a8ad39657d3b8ceba8adf127fc433dacaa718a7e.json  query-dceac08702a18e9fbca4d0034cee7a83b93720c97e33b168ec0e4c0d7e2213b7.json  query-e7511a933f83e2c97f71084cd9d123f2ae685459e224c6317b6ef87481220fc7.json  query-f741c8c1c554800d80e75db4635151022ee9d0d73358b388d9be2ef52323f29c.json
apps/api/: Cargo.toml
apps/api/src/: auth.rs  errors.rs  internal_router.rs  logger.rs  main.rs  openapi.rs  response.rs  router.rs  state.rs
apps/webapp/: .cta.json  .env.example  docker-entrypoint.sh  nginx.conf  package.json  pnpm-lock.yaml
apps/webapp/public/: config.json
apps/webapp/src/: routeTree.gen.ts
apps/webapp/src/components/: app-sidebar.tsx  auth-gate.tsx  config-gate.tsx  floating-action-bar.tsx  nav-main.tsx  nav-user.tsx  team-switcher.tsx
apps/webapp/src/hooks/: use-dirty.ts
apps/webapp/src/lib/: oidc.ts  runtime-config.ts
apps/webapp/src/pages/customers/: mocks.ts  types.ts
apps/webapp/src/pages/customers/feature/: customer-edit-feature.tsx  customer-list-feature.tsx
apps/webapp/src/pages/customers/ui/: customer-edit-ui.tsx  customer-list-ui.tsx
apps/webapp/src/pages/home/feature/: home-feature.tsx
apps/webapp/src/pages/home/ui/: home-ui.tsx
apps/webapp/src/routes/: __root.tsx  _app.customers.$customerId.tsx  _app.customers.index.tsx  _app.customers.tsx  _app.index.tsx  _app.tsx
libs/args/: Cargo.toml
libs/args/src/: auth.rs  database.rs  lib.rs  log.rs  observability.rs  server.rs
libs/auth/: Cargo.toml
libs/auth/src/: lib.rs
libs/auth/src/application/: mod.rs
libs/auth/src/domain/: ports.rs
libs/auth/src/domain/models/: claims.rs  identity.rs  mod.rs  token.rs
libs/auth/src/infrastructure/: ferriskey.rs  mod.rs
libs/common/: Cargo.toml
libs/common/src/: lib.rs
libs/core/: Cargo.toml
libs/core/src/: lib.rs
libs/core/src/application/: mod.rs
libs/core/src/application/member/: mod.rs
libs/core/src/application/organization/: mod.rs
libs/core/src/application/role/: mod.rs
libs/core/src/application/user/: mod.rs
libs/core/src/domain/: mod.rs
libs/core/src/domain/member/: commands.rs  mod.rs  ports.rs  service.rs
libs/core/src/domain/organization/: commands.rs  mod.rs  ports.rs  service.rs
libs/core/src/domain/role/: commands.rs  mod.rs  ports.rs  service.rs
libs/core/src/domain/user/: commands.rs  mod.rs  ports.rs  service.rs
libs/core/src/infrastructure/: mod.rs
libs/core/src/infrastructure/member/postgres/: mod.rs  model.rs  repository.rs
libs/core/src/infrastructure/organization/postgres/: mod.rs  model.rs  repository.rs
libs/core/src/infrastructure/postgres/: error.rs  mod.rs  tx.rs
libs/core/src/infrastructure/role/postgres/: mod.rs  model.rs  repository.rs
libs/core/src/infrastructure/user/postgres/: mod.rs  model.rs  repository.rs
libs/macros/: Cargo.toml
libs/macros/src/: lib.rs
libs/server/: Cargo.toml
libs/server/src/: errors.rs  lib.rs
migrations/: 20260425000001_create_users.up.sql  20260425000002_create_organizations.up.sql  20260425000003_create_roles.up.sql  20260425000004_create_members.down.sql  20260425000004_create_members.up.sql  20260427000001_add_deleted_at_to_organizations.down.sql  20260427000001_add_deleted_at_to_organizations.up.sql
