[workspace]
members = ["apps/api", "libs/args"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["nathaelb <nathael@ferriskey.rs>"]
edition = "2024"


[workspace.dependencies]
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0.18"
axum = { version = "0.8.9", features = ["macros"] }
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.6.1", features = ["env", "derive"] }
url = "2.5.8"
