[workspace]
members = ["apps/api", "libs/args", "libs/auth", "libs/common", "libs/core", "libs/macros", "libs/server"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["nathaelb <nathael@ferriskey.rs>"]
edition = "2024"


[workspace.dependencies]
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0.18"
axum = { version = "0.8.9", features = ["macros"] }
axum-server = "0.8.0"
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.6.1", features = ["env", "derive"] }
url = "2.5.8"
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
opentelemetry = "0.31.0"
tracing-opentelemetry = "0.32.1"
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.31.0"
opentelemetry-appender-tracing = "0.31.1"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
axum-extra = { version = "0.12.6", features = ["typed-routing"] }
utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
reqwest = { version = "0.12.24", features = ["json"] }
uuid = { version = "1.19.0", features = ["serde", "v4", "v7"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros", "json"] }

# Oxid Dependencies
args = { path = "libs/args" }
auth = { path = "libs/auth" }
common = { path = "libs/common" }
oxid-core = { path = "libs/core" }
oxid-macros = { path = "libs/macros" }
server = { path = "libs/server" }
