[package]
name = "api"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
args = { workspace = true }
