[package]
name = "api"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
oxid-core = { workspace = true }
auth = { workspace = true }
server = { workspace = true }
common = { workspace = true }

axum = { workspace = true }
clap = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
args = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
tower-http = { workspace = true }
axum-extra = { workspace = true }
utoipa = { workspace = true }
utoipa-scalar = { workspace = true }
utoipa-swagger-ui = { workspace = true }
