[package]
name = "auth"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
httpmock = "0.7.0"
