[package]
name = "oxid-core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
auth = { workspace = true }
oxid-macros = { workspace = true }

uuid = { workspace = true }
serde = { workspace = true }
utoipa = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true }
